--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="card sedans">
         <img
-          src="./3-column-preview-card-component-main/images/icon-sedans.svg"
+          src="icon-sedans.svg"
           alt="sedan icon"
         />
         <h2>Sedans</h2>
@@ -37,7 +37,7 @@
       </div>
       <div class="card suvs">
         <img
-          src="./3-column-preview-card-component-main/images/icon-suvs.svg"
+          src="icon-suvs.svg"
           alt="suvs icon"
         />
         <h2>Suvs</h2>
@@ -49,7 +49,7 @@
       </div>
       <div class="card luxury">
         <img
-          src="./3-column-preview-card-component-main/images/icon-luxury.svg"
+          src="icon-luxury.svg"
           alt="luxury icon"
         />
         <h2>Luxury</h2>
